anneal/vendor/zerocopy-derive/tests/ui/cfgs/on_error.msrv.stderr
error: `on_error` is experimental; pass '--cfg zerocopy_unstable_derive_on_error' to enable
  --> $DIR/on_error.rs:13:10
   |
13 | #[derive(FromBytes)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `bool: FromBytes` is not satisfied
  --> $DIR/on_error.rs:13:10
   |
13 | #[derive(FromBytes)]
   |          ^^^^^^^^^ the trait `FromBytes` is not implemented for `bool`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
